# SlipNet

./: .gitignore  .gitmodules  ADDITIONAL_TERMS.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  release-cli.yml
app/: build.gradle.kts
app/full/release/: output-metadata.json
app/full/release/baselineProfiles/0/: SlipNet-v2.1.1-full-release-universal.dm
app/full/release/baselineProfiles/1/: SlipNet-v2.1.1-full-release-armeabi-v7a.dm
app/lite/release/: output-metadata.json
app/lite/release/baselineProfiles/0/: SlipNet-v2.2.0-lite-release-universal.dm
app/lite/release/baselineProfiles/1/: SlipNet-v2.2.0-lite-release-arm64-v8a.dm
app/scripts/: build-openssl-android.sh
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk
app/src/main/rust/slipstream-rust/: Cargo.toml
app/src/main/rust/slipstream-rust/.cargo/: config.toml
app/src/main/rust/slipstream-rust/crates/slipstream-client/: Cargo.toml  build.rs
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/: android.rs  dns.rs  lib.rs  main.rs  runtime.rs  streams.rs
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/dns/: path.rs  probe.rs  resolver.rs  response.rs
app/src/main/rust/slipstream-rust/crates/slipstream-client/src/runtime/: setup.rs
app/src/main/rust/slipstream-rust/crates/slipstream-ffi/src/: lib.rs  picoquic.rs
app/src/main/rust/slipstream-rust/crates/slipstream-server/src/: streams.rs
app/src/main/rust/slipstream-rust/crates/slipstream-server/tests/: stream_limit_e2e.rs
app/src/main/rust/slipstream-rust/scripts/: build_picoquic.sh
cli/: .gitignore  Makefile  crypto.go  direct.go  e2e.go  embed_resolvers.go  go.mod  interactive.go  key_stub.go  main.go  scanner.go  slipstream.go  sni_fragment.go  vless.go
cli/cmd/keygen/: main.go
dns-multiplexer/: cache.go  cover.go  go.mod  go.sum  main.go  pool.go  proxy.go  resolvers.txt  scanner.go  transport.go
docs/: USER_GUIDE.md
gomobile-build/: Makefile  go.mod  go.sum  tools.go
snowflake-mobile/: .gitignore  Makefile  go.mod  go.sum  tools.go
snowflake-mobile/snowflake/: mobile.go
(+110 files in other folders)
