[package]
name = "slipstream-client"
version = "0.1.0"
edition = "2021"
description = "Slipstream DNS tunnel client CLI"
license = "Apache-2.0"
repository = "https://github.com/Mygod/slipstream-rust"
readme = "../../README.md"

[lib]
name = "slipstream"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "slipstream-client"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = "0.2"
openssl = "0.10"
socket2 = "0.6"
slipstream-core = { path = "../slipstream-core" }
slipstream-dns = { path = "../slipstream-dns" }
slipstream-ffi = { path = "../slipstream-ffi" }
tokio = { version = "1.37", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
tracing-android = "0.2"

[features]
default = []
openssl-vendored = ["openssl/vendored", "slipstream-ffi/openssl-vendored"]
openssl-static = ["slipstream-ffi/openssl-static"]
picoquic-minimal-build = ["slipstream-ffi/picoquic-minimal-build"]

[dev-dependencies]
slipstream-core = { path = "../slipstream-core", features = ["invariant-panic", "test-support"] }
